--- a/app/src/main/res/layout/activity_choose_planet.xml
+++ b/app/src/main/res/layout/activity_choose_planet.xml
@@ -67,7 +67,7 @@
             android:textAlignment="center" />
 
         <TextView
-            android:id="@+id/infoPlanetIceTextView"
+            android:id="@+id/infoPlanetDesertTextView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="8dp"
@@ -77,7 +77,7 @@
             android:textAlignment="center" />
 
         <TextView
-            android:id="@+id/infoPlanetDesertTextView"
+            android:id="@+id/infoPlanetIceTextView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="8dp"
@@ -88,17 +88,26 @@
 
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/choosePlanetImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="52dp"
-        android:clickable="true"
-        android:onClick="chooseYourFirstPlanet"
-        android:visibility="invisible"
-        app:srcCompat="@drawable/chooseplanet" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:weightSum="1"
+        android:id="@+id/linearLayout3"
+        android:layout_below="@+id/linearLayout2"
+        android:layout_alignParentStart="true">
+
+        <ImageView
+            android:id="@+id/choosePlanetImageView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:onClick="chooseYourFirstPlanet"
+            android:src="@drawable/chooseplanet"
+            android:visibility="invisible" />
+
+    </LinearLayout>
 
 
 </RelativeLayout>
