--- a/app/src/main/res/layout/activity_planet.xml
+++ b/app/src/main/res/layout/activity_planet.xml
@@ -2,16 +2,55 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/content"
     tools:context="com.messanger.firebase.malavero.abyssgates.PlanetActivity">
 
 
     <ImageView
+        android:id="@+id/backgroundMap"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/backgroundMap"
-        />
+        android:scaleType="fitXY"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/flag"
+            tools:layout_editor_absoluteY="155dp"
+            tools:layout_editor_absoluteX="409dp" />
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@+id/imageView1"
+            android:layout_marginEnd="202dp"
+            android:src="@drawable/flag"
+            tools:layout_editor_absoluteY="236dp"
+            tools:layout_editor_absoluteX="205dp" />
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_below="@+id/imageView2"
+            android:layout_marginStart="21dp"
+            android:layout_toEndOf="@+id/imageView2"
+            android:src="@drawable/flag"
+            tools:layout_editor_absoluteY="121dp"
+            tools:layout_editor_absoluteX="155dp" />
+    </android.support.constraint.ConstraintLayout>
+
 
 </RelativeLayout>
