--- a/app/src/main/res/layout/activity_planet.xml
+++ b/app/src/main/res/layout/activity_planet.xml
@@ -17,40 +17,16 @@
         android:layout_alignParentStart="true" />
 
 
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/flag"
-            tools:layout_editor_absoluteY="155dp"
-            tools:layout_editor_absoluteX="409dp" />
+    <ImageView
+        android:id="@+id/flagBudiling"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/flag"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/imageView1"
-            android:layout_marginEnd="202dp"
-            android:src="@drawable/flag"
-            tools:layout_editor_absoluteY="236dp"
-            tools:layout_editor_absoluteX="205dp" />
 
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_below="@+id/imageView2"
-            android:layout_marginStart="21dp"
-            android:layout_toEndOf="@+id/imageView2"
-            android:src="@drawable/flag"
-            tools:layout_editor_absoluteY="121dp"
-            tools:layout_editor_absoluteX="155dp" />
-    </android.support.constraint.ConstraintLayout>
 
 
 </RelativeLayout>
